Adjusting shadows - weird z-index issues coming up

--- a/src/styles/2-tools/_mixins.scss
+++ b/src/styles/2-tools/_mixins.scss
@@ -7,11 +7,12 @@
     content: '';
     display: block;
     position: absolute;
-    z-index: -1;
+    z-index: $layer--low;
     bottom: 0;
     left: 20%;
-    height: 2rem;
+    height: 5px;
     width: 60%;
-    box-shadow: 0 0.3rem 13px -0.1rem rgba(#000, 0.25);
+    background: rgba(0, 0, 0, 0);
+    box-shadow: 0 0.5rem 7px -0.1rem rgba(#000, 0.1);
   }
 }
