--- a/src/styles/6-components/_cards.scss
+++ b/src/styles/6-components/_cards.scss
@@ -8,9 +8,9 @@
   padding: $spacing--md;
   border-radius: $borderRadius;
   background: $color--white;
-  box-shadow: 0 0.3rem 5px -0.3rem rgba(#000, 0.5);
+  position: relative;
+  z-index: $layer--mid;
   cursor: pointer;
-  overflow: hidden;
 }
 
 .card--btn {
